package behavioral.observer.bt6;

public interface IDashboard {
    void hienThiTT(PlayerData data);

}
